# emailaddr

./: CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md
.github/workflows/: ci.yml  loc.yml
examples/: emailaddr.rs
src/: addr.rs  arbitrary_impl.rs  buffer.rs  domain.rs  lib.rs  local.rs  options.rs  quickcheck_impl.rs  serde_impl.rs
tests/: coverage.rs  emailaddr.rs
