[package]
name = "emailaddr"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/al8n/emailaddr"
homepage = "https://github.com/al8n/emailaddr"
documentation = "https://docs.rs/emailaddr"
description = "Type-safe, validated email addresses with generic storage, IDNA domain support, and no_std/no-alloc compatibility."
license = "MIT OR Apache-2.0"
rust-version = "1.83"

[features]
default = ["std"]
alloc = ["idna/alloc", "idna/compiled_data"]
std = ["idna/default", "thiserror/default"]
loom = []
tarpaulin = []

[dependencies]
either = { version = "1", default-features = false }
idna = { version = "1", default-features = false, optional = true }
thiserror = { version = "2", default-features = false }

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
